GNOME Bugzilla – Bug 762996
Revealer doesn't reveal the entire width of a ListBox that has Revealers inside its rows
Last modified: 2016-04-27 13:24:55 UTC
Created attachment 322886 [details] Reproducer See the attached reproducer. With animations turned off, the entire width of the list box is not shown. That causes the list box to expand when each row is further revealed. With animations turned on, the entire width of the list box is shown.
Soo now that TRANSITION_NONE means 0x0 size when concealed, we do that for all transition types when animations are disabled, because the effective transition type is TRANSITION_NONE. We could add a private TRANSITION_NONE_VERTICAL or TRANSITION_NONE_HORIZONTAL for the effective transition types, or make them public and support those use cases.
(In reply to Timm Bäder from comment #1) > We could add a private TRANSITION_NONE_VERTICAL or > TRANSITION_NONE_HORIZONTAL for the effective transition types, or make them > public and support those use cases. I would keep them private for now.
Created attachment 322968 [details] [review] Add GtkRevealer sizing tests
Created attachment 322969 [details] [review] Don't use TRANSITION_NONE if animations are disabled
Review of attachment 322969 [details] [review]: I am not a reviewer, but after some testing I can say that this "works for me".
Created attachment 323011 [details] [review] Add GtkRevealer sizing tests Remove 2 unneeded functions, they were used in earlier versions of the patch.
Created attachment 323012 [details] [review] Don't use TRANSITION_NONE if animations are disabled Changing this actually makes the branch added in 0c25c5d43d3a299698a54b31107339861e556a2d obsolete.
Review of attachment 323011 [details] [review]: yay, a test.
Review of attachment 323012 [details] [review]: ok
Pushed both, thanks.